@@ -4,7 +4,7 @@ Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 9)
-Vcs-Browser: https://svn.debian.org/wsvn/foobar/trunk
+Vcs-Browser: https://svn.debian.org/wsvn/foobar/trunk?foo=bar;op=log;something=else
 Vcs-Svn: svn://svn.debian.org/svn/foobar/trunk
 Vcs-Mtn: www.example.org org.debian.foobar
 Vcs-Hg: http://hg.debian.org/hg/foobar/pkg/foobar
